--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,8 @@ services:
     name: flask-backend
     env: python
     buildCommand: "cd backend && pip install -r requirements.txt"
-    startCommand: "cd backend && python app.py"
+    startCommand: "cd backend && gunicorn app:app"
     envVars:
       - key: FLASK_ENV
         value: production
+
